# FastAPI-Playwright

./: .gitignore  Dockerfile  Dockerfile-es  docker-compose.yaml  main.py  publish.ps1  pyproject.toml  requirements.txt
