[project]
name = "fastapi-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.6.2.post1",
    "certifi==2024.2.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dnspython==2.6.1",
    "email-validator==2.1.1",
    "exceptiongroup==1.2.1",
    "fake-useragent>=2.1.0",
    "fastapi==0.115.4",
    "fastapi-cli==0.0.5",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "orjson==3.10.3",
    "playwright==1.48.0",
    "pydantic==2.7.1",
    "pydantic-core==2.18.2",
    "pyee==12.0.0",
    "pygments==2.18.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.41.2",
    "typer==0.12.5",
    "typing-extensions==4.11.0",
    "ujson==5.10.0",
    "uvicorn==0.32.0",
    "websockets==12.0",
]
